Fix broken css layouts

--- a/app/assets/stylesheets/components/layout.scss
+++ b/app/assets/stylesheets/components/layout.scss
@@ -168,4 +168,9 @@
       }
     }
   }
+
+  .title-row {
+    display: flex;
+    flex-direction: row;
+  }
 }
